Resources/Parsers/angelscript/angelscriptParser.js
// Generated from ./angelscript/angelscript.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import angelscriptListener from './angelscriptListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class angelscriptParser extends antlr4.Parser {

    static grammarFileName = "angelscript.g4";
    static literalNames = [ null, "';'", "'shared'", "'abstract'", "'final'", 
                            "'external'", "'class'", "':'", "','", "'{'", 
                            "'}'", "'typedef'", "'namespace'", "'private'", 
                            "'protected'", "'&'", "'~'", "'const'", "'interface'", 
                            "'='", "'import'", "'from'", "'enum'", "'funcdef'", 
                            "'get'", "'set'", "'mixin'", "'('", "')'", "'in'", 
                            "'out'", "'inout'", "'<'", "'>'", "'['", "']'", 
                            "'@'", "'::'", "'?'", "'auto'", "'switch'", 
                            "'break'", "'for'", "'while'", "'do'", "'if'", 
                            "'else'", "'continue'", "'try'", "'catch'", 
                            "'return'", "'case'", "'default'", "'.'", "'++'", 
                            "'--'", "'cast'", "'function'", null, null, 
                            null, null, null, null, null, null, "'void'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, "BITOP", "MATHOP", "COMPOP", "LOGICOP", 
                             "ASSIGNOP", "PRIMTYPE", "FUNCATTR", "EXPRPREOP", 
                             "VOID", "LITERAL", "IDENTIFIER", "NUMBER", 
                             "STRING", "BITS", "COMMENT", "WS" ];
    static ruleNames = [ "start_", "script", "class_", "typdef", "namespace", 
                         "func_", "interface_", "var_", "import_", "enum_", 
                         "funcdef", "virtprop", "mixin_", "intfmthd", "statblock", 
                         "paramlist", "typemod", "type_", "initlist", "scope", 
                         "datatype", "statement", "switch_", "break_", "for_", 
                         "while_", "dowhile", "if_", "continue_", "exprstat", 
                         "try_", "return_", "case_", "expr", "exprterm", 
                         "exprvalue", "constructcall", "exprpostop", "cast", 
                         "lambda_", "funccall", "varaccess", "arglist", 
                         "assign", "condition", "exprop" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = angelscriptParser.ruleNames;
        this.literalNames = angelscriptParser.literalNames;
        this.symbolicNames = angelscriptParser.symbolicNames;
    }



	start_() {
	    let localctx = new Start_Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, angelscriptParser.RULE_start_);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 92;
	        this.script();
	        this.state = 93;
	        this.match(angelscriptParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	script() {
	    let localctx = new ScriptContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, angelscriptParser.RULE_script);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 107; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 107;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 95;
	                this.import_();
	                break;

	            case 2:
	                this.state = 96;
	                this.enum_();
	                break;

	            case 3:
	                this.state = 97;
	                this.typdef();
	                break;

	            case 4:
	                this.state = 98;
	                this.class_();
	                break;

	            case 5:
	                this.state = 99;
	                this.mixin_();
	                break;

	            case 6:
	                this.state = 100;
	                this.interface_();
	                break;

	            case 7:
	                this.state = 101;
	                this.funcdef();
	                break;

	            case 8:
	                this.state = 102;
	                this.virtprop();
	                break;

	            case 9:
	                this.state = 103;
	                this.var_();
	                break;

	            case 10:
	                this.state = 104;
	                this.func_();
	                break;

	            case 11:
	                this.state = 105;
	                this.namespace();
	                break;

	            case 12:
	                this.state = 106;
	                this.match(angelscriptParser.T__0);
	                break;

	            }
	            this.state = 109; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 81229950) !== 0) || ((((_la - 37)) & ~0x1f) === 0 && ((1 << (_la - 37)) & 2214592519) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	class_() {
	    let localctx = new Class_Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, angelscriptParser.RULE_class_);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 114;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 60) !== 0)) {
	            this.state = 111;
	            _la = this._input.LA(1);
	            if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 60) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 116;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 117;
	        this.match(angelscriptParser.T__5);
	        this.state = 118;
	        this.match(angelscriptParser.IDENTIFIER);
	        this.state = 142;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	            this.state = 119;
	            this.match(angelscriptParser.T__0);
	            break;
	        case 7:
	        case 9:
	            this.state = 129;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===7) {
	                this.state = 120;
	                this.match(angelscriptParser.T__6);
	                this.state = 121;
	                this.match(angelscriptParser.IDENTIFIER);
	                this.state = 126;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                while(_la===8) {
	                    this.state = 122;
	                    this.match(angelscriptParser.T__7);
	                    this.state = 123;
	                    this.match(angelscriptParser.IDENTIFIER);
	                    this.state = 128;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                }
	            }

	            this.state = 131;
	            this.match(angelscriptParser.T__8);
	            this.state = 138;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) === 0 && ((1 << _la) & 8609828) !== 0) || ((((_la - 37)) & ~0x1f) === 0 && ((1 << (_la - 37)) & 2214592519) !== 0)) {
	                this.state = 136;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	                switch(la_) {
	                case 1:
	                    this.state = 132;
	                    this.virtprop();
	                    break;

	                case 2:
	                    this.state = 133;
	                    this.func_();
	                    break;

	                case 3:
	                    this.state = 134;
	                    this.var_();
	                    break;

	                case 4:
	                    this.state = 135;
	                    this.funcdef();
	                    break;

	                }
	                this.state = 140;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 141;
	            this.match(angelscriptParser.T__9);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	typdef() {
	    let localctx = new TypdefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, angelscriptParser.RULE_typdef);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 144;
	        this.match(angelscriptParser.T__10);
	        this.state = 145;
	        this.match(angelscriptParser.PRIMTYPE);
	        this.state = 146;
	        this.match(angelscriptParser.IDENTIFIER);
	        this.state = 147;
	        this.match(angelscriptParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	namespace() {
	    let localctx = new NamespaceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, angelscriptParser.RULE_namespace);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 149;
	        this.match(angelscriptParser.T__11);
	        this.state = 150;
	        this.match(angelscriptParser.IDENTIFIER);
	        this.state = 151;
	        this.match(angelscriptParser.T__8);
	        this.state = 152;
	        this.script();
	        this.state = 153;
	        this.match(angelscriptParser.T__9);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	func_() {
	    let localctx = new Func_Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, angelscriptParser.RULE_func_);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 158;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2 || _la===5) {
	            this.state = 155;
	            _la = this._input.LA(1);
	            if(!(_la===2 || _la===5)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 160;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 162;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===13 || _la===14) {
	            this.state = 161;
	            _la = this._input.LA(1);
	            if(!(_la===13 || _la===14)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	        }

	        this.state = 169;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	        if(la_===1) {
	            this.state = 164;
	            this.type_();
	            this.state = 166;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===15) {
	                this.state = 165;
	                this.match(angelscriptParser.T__14);
	            }


	        } else if(la_===2) {
	            this.state = 168;
	            this.match(angelscriptParser.T__15);

	        }
	        this.state = 171;
	        this.match(angelscriptParser.IDENTIFIER);
	        this.state = 172;
	        this.paramlist();
	        this.state = 174;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===17) {
	            this.state = 173;
	            this.match(angelscriptParser.T__16);
	        }

	        this.state = 177;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===64) {
	            this.state = 176;
	            this.match(angelscriptParser.FUNCATTR);
	        }

	        this.state = 181;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	            this.state = 179;
	            this.match(angelscriptParser.T__0);
	            break;
	        case 9:
	            this.state = 180;
	            this.statblock();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	interface_() {
	    let localctx = new Interface_Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, angelscriptParser.RULE_interface_);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 186;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2 || _la===5) {
	            this.state = 183;
	            _la = this._input.LA(1);
	            if(!(_la===2 || _la===5)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 188;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 189;
	        this.match(angelscriptParser.T__17);
	        this.state = 190;
	        this.match(angelscriptParser.IDENTIFIER);
	        this.state = 212;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	            this.state = 191;
	            this.match(angelscriptParser.T__0);
	            break;
	        case 7:
	        case 9:
	            this.state = 201;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===7) {
	                this.state = 192;
	                this.match(angelscriptParser.T__6);
	                this.state = 193;
	                this.match(angelscriptParser.IDENTIFIER);
	                this.state = 198;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                while(_la===8) {
	                    this.state = 194;
	                    this.match(angelscriptParser.T__7);
	                    this.state = 195;
	                    this.match(angelscriptParser.IDENTIFIER);
	                    this.state = 200;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                }
	            }

	            this.state = 203;
	            this.match(angelscriptParser.T__8);
	            this.state = 208;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) === 0 && ((1 << _la) & 155648) !== 0) || ((((_la - 37)) & ~0x1f) === 0 && ((1 << (_la - 37)) & 2214592519) !== 0)) {
	                this.state = 206;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,18,this._ctx);
	                switch(la_) {
	                case 1:
	                    this.state = 204;
	                    this.virtprop();
	                    break;

	                case 2:
	                    this.state = 205;
	                    this.intfmthd();
	                    break;

	                }
	                this.state = 210;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 211;
	            this.match(angelscriptParser.T__9);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	var_() {
	    let localctx = new Var_Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, angelscriptParser.RULE_var_);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 215;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===13 || _la===14) {
	            this.state = 214;
	            _la = this._input.LA(1);
	            if(!(_la===13 || _la===14)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	        }

	        this.state = 217;
	        this.type_();
	        this.state = 218;
	        this.match(angelscriptParser.IDENTIFIER);
	        this.state = 225;
	        this._errHandler.sync(this);
	        switch (this._input.LA(1)) {
	        case 19:
	        	this.state = 219;
	        	this.match(angelscriptParser.T__18);
	        	this.state = 222;
	        	this._errHandler.sync(this);
	        	var la_ = this._interp.adaptivePredict(this._input,22,this._ctx);
	        	switch(la_) {
	        	case 1:
	        	    this.state = 220;
	        	    this.initlist();
	        	    break;

	        	case 2:
	        	    this.state = 221;
	        	    this.expr();
	        	    break;

	        	}
	        	break;
	        case 27:
	        	this.state = 224;
	        	this.arglist();
	        	break;
	        case 1:
	        case 8:
	        	break;
	        default:
	        	break;
	        }
	        this.state = 239;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===8) {
	            this.state = 227;
	            this.match(angelscriptParser.T__7);
	            this.state = 228;
	            this.match(angelscriptParser.IDENTIFIER);
	            this.state = 235;
	            this._errHandler.sync(this);
	            switch (this._input.LA(1)) {
	            case 19:
	            	this.state = 229;
	            	this.match(angelscriptParser.T__18);
	            	this.state = 232;
	            	this._errHandler.sync(this);
	            	var la_ = this._interp.adaptivePredict(this._input,24,this._ctx);
	            	switch(la_) {
	            	case 1:
	            	    this.state = 230;
	            	    this.initlist();
	            	    break;

	            	case 2:
	            	    this.state = 231;
	            	    this.expr();
	            	    break;

	            	}
	            	break;
	            case 27:
	            	this.state = 234;
	            	this.arglist();
	            	break;
	            case 1:
	            case 8:
	            	break;
	            default:
	            	break;
	            }
	            this.state = 241;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 242;
	        this.match(angelscriptParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	import_() {
	    let localctx = new Import_Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, angelscriptParser.RULE_import_);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 244;
	        this.match(angelscriptParser.T__19);
	        this.state = 245;
	        this.type_();
	        this.state = 247;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===15) {
	            this.state = 246;
	            this.match(angelscriptParser.T__14);
	        }

	        this.state = 249;
	        this.match(angelscriptParser.IDENTIFIER);
	        this.state = 250;
	        this.paramlist();
	        this.state = 251;
	        this.match(angelscriptParser.FUNCATTR);
	        this.state = 252;
	        this.match(angelscriptParser.T__20);
	        this.state = 253;
	        this.match(angelscriptParser.STRING);
	        this.state = 254;
	        this.match(angelscriptParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	enum_() {
	    let localctx = new Enum_Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, angelscriptParser.RULE_enum_);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 259;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2 || _la===5) {
	            this.state = 256;
	            _la = this._input.LA(1);
	            if(!(_la===2 || _la===5)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 261;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 262;
	        this.match(angelscriptParser.T__21);
	        this.state = 263;
	        this.match(angelscriptParser.IDENTIFIER);
	        this.state = 283;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	            this.state = 264;
	            this.match(angelscriptParser.T__0);
	            break;
	        case 9:
	            this.state = 265;
	            this.match(angelscriptParser.T__8);
	            this.state = 266;
	            this.match(angelscriptParser.IDENTIFIER);
	            this.state = 269;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===19) {
	                this.state = 267;
	                this.match(angelscriptParser.T__18);
	                this.state = 268;
	                this.expr();
	            }

	            this.state = 279;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===8) {
	                this.state = 271;
	                this.match(angelscriptParser.T__7);
	                this.state = 272;
	                this.match(angelscriptParser.IDENTIFIER);
	                this.state = 275;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                if(_la===19) {
	                    this.state = 273;
	                    this.match(angelscriptParser.T__18);
	                    this.state = 274;
	                    this.expr();
	                }

	                this.state = 281;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 282;
	            this.match(angelscriptParser.T__9);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funcdef() {
	    let localctx = new FuncdefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, angelscriptParser.RULE_funcdef);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 288;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2 || _la===5) {
	            this.state = 285;
	            _la = this._input.LA(1);
	            if(!(_la===2 || _la===5)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 290;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 291;
	        this.match(angelscriptParser.T__22);
	        this.state = 292;
	        this.type_();
	        this.state = 294;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===15) {
	            this.state = 293;
	            this.match(angelscriptParser.T__14);
	        }

	        this.state = 296;
	        this.match(angelscriptParser.IDENTIFIER);
	        this.state = 297;
	        this.paramlist();
	        this.state = 298;
	        this.match(angelscriptParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


